--- a/AdManageKit/src/main/res/values/strings.xml
+++ b/AdManageKit/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="install">Install</string>
+
+    <!-- Ad Loading Dialog -->
+    <string name="ad_loading_title">Loading Ad</string>
+    <string name="ad_loading_message">Please wait a moment…</string>
+
+    <!-- Welcome Back Dialog -->
+    <string name="welcome_back_title">Welcome Back!</string>
+    <string name="welcome_back_subtitle">Loading your content…</string>
+    <string name="welcome_back_footer">Just a moment…</string>
+
+    <!-- Content Description -->
+    <string name="app_icon_description">App icon</string>
 </resources>
